Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11013

TextEdit fails to draw selected text highlighted when pressing Ctrl-A

XMLWordPrintable

    • a0b725d916ec794c1a0f02b37525a15ad27d145d

      Running the code in QTBUG-10940, pressing Ctrl-A to select all the text does indeed
      select all the text, but the TextEdit fails to draw all the text as selected (the last character
      is highlighted, then all the text is drawn selected when the Ctrl key (only) is pressed again).
      Holding Ctrl while pressing A, C, V, V, V show that the text was indeed selected.
      Check TextInput for same issue.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            mathiasm Mathias Malmqvist
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes