Repaint all text when Ctrl+A is pressed in TextEdit QTextControl::updateRequest() with empty rect means update all.

Task-number: QTBUG-11013